--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ keywords = ["geometry", "mask", "quaternion", "geospec", "shapes"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 
+[[bench]]
+name = "geospec_bench"
+harness = false
+
 [dev-dependencies]
 criterion = "0.5"
